--- a/style.css
+++ b/style.css
@@ -127,3 +127,14 @@ button:hover {
   margin-top: 30px;
   color: #fff;
 }
+
+/* Autofill styles */
+.input-field input:-webkit-autofill,
+.input-field input:-webkit-autofill:hover,
+.input-field input:-webkit-autofill:focus,
+.input-field input:-webkit-autofill:active {
+  box-shadow: 0 0 0 1000px transparent inset !important;
+  -webkit-text-fill-color: #fff !important;
+  caret-color: #fff !important;
+  transition: background-color 5000s ease-in-out 0s !important;
+}
